<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/distanceValueTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lightIndicatorTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/testResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testResetLabel" />

    <Button
        android:id="@+id/testRightServoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testRightServoButtonLabel" />

    <Button
        android:id="@+id/testLeftServoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testLeftServoButtonLabel" />

    <Button
        android:id="@+id/testGoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testGoLabel" />

    <Button
        android:id="@+id/testNoGoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testNoGoLabel" />

    <Button
        android:id="@+id/testFlareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testFlareLabel" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statusLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
